# openclaw-Local-running-rust-server-opeenclaw-interesting-cli-

./: .env  .env.example  .gitignore  OPENCLAW_LOCAL.md  openclaw.json.example
python_llm/: chat_cli.py  model_server.py  requirements.txt  requirements.txt.tmp.19832.1771980325057
rust_server/: Cargo.toml  config.toml
rust_server/.cargo/: config.toml
rust_server/src/: bot_logic.rs  config.rs  error.rs  llm_client.rs  main.rs  middleware.rs  openai_compat.rs  routes.rs
scripts/: copy_models_to_w.bat  install_python.bat  start_all.bat  start_chat.bat  start_openclaw_deepseek_r1.bat  start_python.bat  start_python_deepseek_r1.bat  start_rust.bat  start_tmux.sh  test_api.bat
