[package]
name = "clawdbot-server"
version = "0.1.0"
edition = "2021"
authors = ["ClawDBot Project"]
description = "ClawDBot Rust API szerver – LLM proxy és bot logika"

[[bin]]
name = "clawdbot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# HTTP szerver
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# HTTP kliens (Python LLM hívás)
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket support (axum beépített, de tokio-tungstenite is kell)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Konfiguráció
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hibakezelés
thiserror = "1.0"
anyhow = "1.0"

# UUID (session azonosítókhoz)
uuid = { version = "1.8", features = ["v4", "serde"] }

# Streaming / async iterátor segédkönyvtár
futures-util = "0.3"

# HTTP típusok (Method, Header stb.)
http = "1.0"

# Időkezelés
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting (egyszerű in-memory)
governor = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
